--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
 		"vitest": "^3.2.4"
 	},
 	"dependencies": {
+		"@vercel/analytics": "^1.5.0",
+		"lucide-svelte": "^0.545.0",
 		"tailwind-merge": "^3.3.1"
 	}
 }
